tests/tests/ui/enum_integer_storage_out_of_range.rs
#[derive(toasty::Embed)]
#[column(type = u8)]
enum Status {
    #[column(variant = 256)]
    Invalid,
}

fn main() {}
